welcome.lessons.welcome.methods.picture.PatternPicture.scala.code
override def run() {

faireV(Color.red)



}
